TRYING TO FIX JAVA 8 USING JAVA 11 BUG DUNNO IF IT WILL WORK :<